added filter for least amount of decos used. also added dark mode toggle

--- a/Athena's ASS MH3G/Data/Languages/Deutsch/strings.txt
+++ b/Athena's ASS MH3G/Data/Languages/Deutsch/strings.txt
@@ -8,6 +8,7 @@
 &Speichern
 B&eenden
 &Zurücksetzen
+Dark Mode
 Erlaube &Negativskills
 Erlaube &Piercings
 Erlaube &Eventrüstungen
@@ -54,6 +55,7 @@ Maximalverteidigung
 Schwierigkeit
 Seltenheit
 Freie Slots
+Decos Used
 Familie
 Extra Skills
 Talismane
